--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     
+<!--Header-->
 
+    <header class="menu__header">
+        <div class="arrow"><a href="../Index.html"><i class="fas fa-arrow-left"></i></a> </div>
+        <h1><a href="../Index.html">Ohmyfood</a></h1> 
+    </header>
+
+<!--Main-->
+
+    <main class="main">
+        <div class="header__img">
+            <img src="" alt="" title="">
+        </div>
+        <div class="main__menu">
+            
+        </div>
+    </main>
 
 
 
