--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -22,7 +22,57 @@
             <img src="" alt="" title="">
         </div>
         <div class="main__menu">
-            
+            <div class="menu__title">
+                <h2>A la française</h2>
+                <div class="fill__heart">
+                    <span><i class="fill far fa-heart fa-2x"></i></span>
+                </div>
+            </div>
+            <div class="full__menu">
+                <div class="starter">
+                    <div class="starter__title">
+                        <h3>Entrées</h3>
+                        <div class="line"></div>
+                    </div>
+
+<!--Entrées-->
+
+    <div class="meals">
+        <h4>Tartare de poulpe acidulé</h4>
+        <div class="last__line">
+            <p>Aux zestes d'orange</p>
+            <span><strong>25€</strong></span>
+        </div>
+        <div class"cross">
+            <span><i class"fas fa-check-circle fa-2x"></i></span>
+        </div>
+    </div>
+    <div class="meals">
+        <h4>Velouté de légumes d'antan</h4>
+        <div class="last__line">
+            <p>Carotte, panais, topinambour</p>
+            <span><strong>35€</strong></span>
+        </div>
+        <div class"cross">
+            <span><i class"fas fa-check-circle fa-2x"></i></span>
+        </div>
+    </div>
+    <div class="meals">
+        <h4>Soupe à l'oignon</h4>
+        <div class="last__line">
+            <p>Revisitée</p>
+            <span><strong>20€</strong></span>
+        </div>
+        <div class"cross">
+            <span><i class"fas fa-check-circle fa-2x"></i></span>
+        </div>
+    </div>
+
+
+
+                </div>
+            </div>
+
         </div>
     </main>
 
