à-la-française-plat

--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -68,6 +68,44 @@
         </div>
     </div>
 
+<!--Plat-->
+
+    <div class"dish">
+        <div class="dish__title">
+            <h3>Plats</h3>
+            <div class="line"></div>
+        </div>
+        <div class="meals">
+            <h4>Coquilles Saint-Jacques</h4>
+            <div class="last__line">
+                <p>Accompagnées d'une purée de panais</p>
+                <span><strong>40€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        </div>
+        <div class="meals">
+            <h4>Magret de canard </h4>
+            <div class="last__line">
+                <p>Et parmentier de pommes de terre</p>
+                <span><strong>35€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        </div>
+        <div class="meals">
+            <h4>Pigeonneau d'Ile-et-Vilaine</h4>
+            <div class="last__line">
+                <p>Sur son lit de gnocchis aux légumes</p>
+                <span><strong>44€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        </div>
+    </div>
 
 
                 </div>
