à-la-française-dessert

--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -107,12 +107,50 @@
         </div>
     </div>
 
+<!--Desserts-->
 
-                </div>
-            </div>
-
+    <div class="dessert">
+        <div class="dessert__title">
+            <h3>Desserts</h3>
+            <div class="line"></div>
         </div>
-    </main>
+        <div class="meals">
+            <h4>Pétales de violettes glacés</h4>
+            <div class="last__line">
+                <p>et purée de noisettes</p>
+                <span><strong>18€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        <div class="meals">
+            <h4>Fondant au chocolat</h4>
+            <div class="last__line">
+                <p>Revisité</p>
+                <span><strong>22€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        <div class="meals">
+            <h4>Millefeuille croustillant</h4>
+            <div class="last__line">
+                <p>Myrtilles et pâte d'amande</p>
+                <span><strong>23€</strong></span>
+            </div>
+            <div class="cross">
+                <span><i class="fas fa-check-circle fa-2x"></i></span>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</div>
+    
+        <span class="btn__order">
+            <button>Commander</button>
+        </span>
+</main>
 
 
 
