Menu la note enchantée

--- a/Index.html
+++ b/Index.html
@@ -85,9 +85,9 @@
                         <span class="new">Nouveau</span>
                     </div>
 
-                <a href="">
+                <a href="./pages/Menu-La-palette-du-goût.html">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./Images/La-palette-du-goût.jpg" alt="image La palette du goût">
                         <figcaption>
                             <div class="heart">
                                 <h4>La palette du goût</h4>
@@ -104,9 +104,9 @@
                 <div class="btn__card">
                     <span class="new">Nouveau</span>
                 </div>
-                <a href="">
+                <a href="./pages/Menu-La-note-enchantée.html">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./Images/La-note-enchantée.jpg" alt="image la note enchantée">
                         <figcaption>
                             <div class="heart">
                                 <h4>La note enchantée</h4>
@@ -123,9 +123,9 @@
                 <div class="btn__card">
                     <span class="new">Nouveau</span>
                 </div>
-                <a href="">
+                <a href="./pages/Menu-à-la-française.html">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./Images/a-la-française.jpg" alt="image à la française">
                         <figcaption>
                             <div class="heart">
                                 <h4>A la française</h4>
@@ -142,9 +142,9 @@
                 <div class="btn__card">
                     <span class="new">Nouveau</span>
                 </div>
-                <a href="">
+                <a href="./pages/Menu-Le-délice-des-sens.html">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./Images/Le-délice-des-sens.jpg" alt="image le délice des sens">
                         <figcaption>
                             <div class="heart">
                                 <h4>Le délice des sens</h4>
