--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -19,7 +19,7 @@
 
     <main class="main">
         <div class="header__img">
-            <img src="" alt="" title="">
+            <img src="../Images/a-la-française.jpg" alt="menu à la française" title="Ohmyfood menu à la française">
         </div>
         <div class="main__menu">
             <div class="menu__title">
@@ -151,10 +151,6 @@
             <button>Commander</button>
         </span>
 </main>
-
-
-
-
 
     <footer>
         <h3>Ohmyfood</h3>
