--- a/pages/Menu-La-palette-du-goût.html
+++ b/pages/Menu-La-palette-du-goût.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ohmyfood</title>
 </head>
 <body>
 
@@ -19,11 +19,11 @@
 
     <main class="menu__main">
         <div class="header__img">
-            <img src="" alt="menu palette du gout" title="omyfoood menu palette du gout">
+            <img src="../Images/La-palette-du-goût.jpg" alt="menu palette du gout" title="omyfoood menu palette du gout">
         </div>
         <div class="main__menu">
             <div class="menu__title">
-                <h2>La palette du goût</h2>
+                <h2>La palette du goût</h2> 
                 <div class="fill__heart">
                     <span><i class="fill far fa-heart fa-2x"></i></span>
                 </div>
