--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
             <i class="fas fa-map-market-alt"></i>
         </span>
             <span class="maps__search"></span>
-            <input type="search" name="city" value="Paris,Belleville" placeholder="Votre ville"
+            <input type="search" name="city" value="Paris,Belleville" placeholder="Votre ville">
     </div>    
 
     <!--Section A propos-->
