--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/style.css" type="text/css">
     <script src="https://kit.fontawesome.com/6870338000.js" crossorigin="anonymous"></script>
     
 </head>
