--- a/Index.html
+++ b/Index.html
@@ -2,99 +2,103 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
+    <title> Ohmyfood </title>
     <link rel="stylesheet" href="./public/css/style.css" type="text/css">
+    <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
+    <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://kit.fontawesome.com/6870338000.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
+
 <body>
+<!-- Loader -->
+<div class="loader">
+    <div class="loader__food">
+        <span>o</span>
+        <span>h</span>
+        <span>m</span>
+        <span>y</span>
+        <span>f</span>
+        <span>o</span>
+        <span>o</span>
+        <span>d</span>
+    </div>
+    <div class="loader__fork">
+        <span><i class="fas fa-utensils"></i></span>
+    </div>
+</div>
 
-    <div class="loader">
-        <div class="loader__food">
-            <span>o</span>
-            <span>h</span>
-            <span>m</span>
-            <span>y</span>
-            <span>f</span>
-            <span>o</span>
-            <span>o</span>
-            <span>d</span>
-        </div>
-        <div class="loader__fork">
-            <span><i class="fas fa-utensils"></i></span>
-        </div>
+<!-- Header -->
+<header class="main__header">
+    <h1><a href="./Index.html">Ohmyfood</a></h1>
+</header>
+
+
+<main class="main">
+    <!-- Section Maps -->
+    <div class="maps">
+    <span>
+        <i class="fas fa-map-marker-alt"></i>
+    </span>
+        <span class="maps__search">
+        <input type="search" name="city" value="Paris,Belleville" placeholder="Votre ville">
+    </span>
     </div>
 
-    <!--Header-->
-
-    <header class="main__header">
-        <h1><a href="index.html">Ohmyfood</a></h1>
-    </header>
-
-    <main class="loader__fork">
-    <!--Section Maps-->
-    <div class="map">
-        <span>
-            <i class="fas fa-map-market-alt"></i>
-        </span>
-            <span class="maps__search"></span>
-            <input type="search" name="city" value="Paris,Belleville" placeholder="Votre ville">
-    </div>    
-
-    <!--Section A propos-->
-
+    <!-- Section A propos -->
     <div class="about">
-        <h2>Réservez le menu qui vous convient</h2>
-        <p>découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+        <h2> Réservez le menu qui vous convient </h2>
+        <p> Découvrez des restaurants d'exception, sélectionnés par nos soins </p>
         <span class="btn__about">
-            <button>Explorer nos restaurants</button>
-        </span>
+        <button> Explorer nos restaurants </button>
+    </span>
     </div>
 
-    <!--Section Fonctionnement-->
-
-        <section class="operation">
-            <h2>Fonctionnement</h2>
-            <ul class="operation__steps">
+    <!-- Section Fonctionnement -->
+    <section class="operation">
+        <h2>Fonctionnement</h2>
+        <ul class="operation__steps">
             <li>
                 <div class="operation__steps--number">1</div>
-                <div><i class="fas fa-mobile-alt operation__steps--icons"></i></div>
+                <div><i class="fas fa-mobile-alt operation__steps--icon"></i></div>
                 <p>Choisissez un restaurant</p>
             </li>
             <li>
                 <div class="operation__steps--number">2</div>
-                <div><i class="fas fa-list-ul operation__steps--icons"></i></div>
+                <div><i class="fas fa-list-ul operation__steps--icon"></i></div>
                 <p>Composez votre menu</p>
             </li>
             <li>
                 <div class="operation__steps--number">3</div>
-                <div><i class="fas fa-store operation__steps--icons"></i></div>
+                <div><i class="fas fa-store operation__steps--icon"></i></div>
                 <p>Dégustez au restaurant</p>
             </li>
         </ul>
-        </section>
+    </section>
 
-    <!--Section Restaurant-->
-
-        <section class="restaurant">
-            <div class="main__restaurant">
-                <div class="restaurant__title">
-                    <h3>Restaurant</h3>
+    <!-- Section Restaurants -->
+    <section class="restaurant">
+        <div class="main__restaurant">
+            <div class="restaurant__title">
+                <h3>Restaurants</h3>
+            </div>
+            <div class="card">
+                <div class="btn__card">
+                    <span class="new"> Nouveau </span>
                 </div>
-                <div class="card">
-                    <div class="btn__card">
-                        <span class="new">Nouveau</span>
-                    </div>
 
                 <a href="./pages/Menu-La-palette-du-goût.html">
                     <figure>
-                        <img src="./Images/La-palette-du-goût.jpg" alt="image La palette du goût">
+                        <img src="./Images/La-palette-du-gout.jpg" alt="restaurant la palette du gout">
                         <figcaption>
                             <div class="heart">
                                 <h4>La palette du goût</h4>
                                 <div class="fill__heart">
-                                    <span><i class="fill far fa-heart fa-2x"></span>
+                                    <span><i class="fill far fa-heart fa-2x"></i></span>
                                 </div>
                             </div>
                             <p>Ménilmontant</p>
@@ -102,79 +106,80 @@
                     </figure>
                 </a>
             </div>
-            <div classe="card">
+            <div class="card">
                 <div class="btn__card">
-                    <span class="new">Nouveau</span>
+                    <span class="new"> Nouveau </span>
                 </div>
+
                 <a href="./pages/Menu-La-note-enchantée.html">
                     <figure>
-                        <img src="./Images/La-note-enchantée.jpg" alt="image la note enchantée">
+                        <img src="./Images/La-note-enchantee.jpg" alt="restaurant la note enchantee">
                         <figcaption>
                             <div class="heart">
                                 <h4>La note enchantée</h4>
                                 <div class="fill__heart">
                                     <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>    
+                                </div>
                             </div>
                             <p>Charonne</p>
                         </figcaption>
                     </figure>
                 </a>
             </div>
-            <div classe="card">
+            <div class="card">
                 <div class="btn__card">
-                    <span class="new">Nouveau</span>
+                    <span class="new"> Nouveau </span>
                 </div>
+
                 <a href="./pages/Menu-à-la-française.html">
                     <figure>
-                        <img src="./Images/a-la-française.jpg" alt="image à la française">
+                        <img src="./Images/a-la-francaise.jpg" alt="restaurant a la francaise">
                         <figcaption>
                             <div class="heart">
                                 <h4>A la française</h4>
                                 <div class="fill__heart">
                                     <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>    
+                                </div>
                             </div>
                             <p>Cité Rouge</p>
                         </figcaption>
                     </figure>
                 </a>
             </div>
-            <div classe="card">
+            <div class="card">
                 <div class="btn__card">
-                    <span class="new">Nouveau</span>
+                    <span class="new"> Nouveau </span>
                 </div>
+
                 <a href="./pages/Menu-Le-délice-des-sens.html">
                     <figure>
-                        <img src="./Images/Le-délice-des-sens.jpg" alt="image le délice des sens">
+                        <img src="./Images/Le-delice-des-sens.jpg" alt="Restaurant Le délice des sens">
                         <figcaption>
                             <div class="heart">
                                 <h4>Le délice des sens</h4>
                                 <div class="fill__heart">
                                     <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>    
+                                </div>
                             </div>
                             <p>Folie-Méricourt</p>
                         </figcaption>
                     </figure>
                 </a>
             </div>
-
         </div>
-        </section>
-    </main>
+    </section>
+</main>
 
+<!--Footer-->
+<footer>
+    <h3>ohmyfood</h3>
+    <ul>
+        <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+        <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
+    </ul>
+</footer>
 
-    <!--footer-->
-
-    <footer>
-        <h3>Ohmyfood</h3>
-        <ul>
-            <li><a href="a"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
-            <li><a href="a"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
-            <li><a href="a">Mention légales</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </footer>
 </body>
 </html>
