--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../public/css/style.css" type="text/css">
     <script src="https://kit.fontawesome.com/6870338000.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     
 </head>
 <body>
