--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,6 @@
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://kit.fontawesome.com/6870338000.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
@@ -177,7 +176,7 @@
         <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
         <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
         <li><a href="#">Mentions légales</a></li>
-        <li><a href="mailto:ohmyfood-contact@gmail.com">Contact</a></li>
+        <li><a href="picard_mickael@hotmail.fr">Contact</a></li>
     </ul>
 </footer>
 
