--- a/pages/Menu-Le-délice-des-sens.html
+++ b/pages/Menu-Le-délice-des-sens.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="../public/css/style.css" type="text/css">
+    <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
+    <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://kit.fontawesome.com/6870338000.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -23,7 +26,7 @@
 
     <div class="main">
         <div class="header__img">
-            <img src="../Images/Le-délice-des-sens.jpg" alt="menu délice des sens" tittle="ohmyfood menu délice des sens">
+            <img src="../Images/Le-delice-des-sens.jpg" alt="menu délice des sens" tittle="ohmyfood menu délice des sens">
         </div>
         <div class="main__menu">
             <div class="menu__title">
@@ -168,7 +171,7 @@
             <li><a href="a"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="a"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
             <li><a href="a">Mention légales</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="picard_mickael@hotmail.fr">Contact</a></li>
          </ul>
     </footer>
     
