--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -166,7 +166,7 @@
             <li><a href="a"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="a"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
             <li><a href="a">Mention légales</a></li>
-            <li><a href="picard_mickael@hotmail.fr">Contact</a></li>
+            <li><a href="mailto:picard_mickael@hotmail.fr">Contact</a></li>
         </ul>
     </footer>
 
