--- a/Index.html
+++ b/Index.html
@@ -176,7 +176,7 @@
         <li><a href="#"><i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
         <li><a href="#"><i class="fas fa-hands-helping"></i> Devenir partenaire</a></li>
         <li><a href="#">Mentions légales</a></li>
-        <li><a href="picard_mickael@hotmail.fr">Contact</a></li>
+        <li><a href="mailto:picard_mickael@hotmail.fr">Contact</a></li>
     </ul>
 </footer>
 
