--- a/pages/Menu-La-palette-du-goût.html
+++ b/pages/Menu-La-palette-du-goût.html
@@ -117,52 +117,51 @@
                     </div>
                 </div>
 
-<!--Desserts-->
-
+<!-- Desserts -->
                 <div class="dessert">
                     <div class="dessert__title">
                         <h3>Desserts</h3>
-                        <div class="line"></div>
-                    </div>
-                    <div class="meals">
-                        <h4>Paris-Brest</h4>
-                        <div class="last__line">
-                            <p>Revisité</p>
-                            <span><strong>18€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"</span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Macaron au chocolat d'exception</h4>
-                        <div class="last__line">
-                            <p>Et glace à la vanille de Madagascar</p>
-                            <span><strong>22€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"</span>
-                        </div>
-                    </div>
-                    <div class="meals">
-                        <h4>Mousse au chocolat</h4>
-                        <div class="last__line">
-                            <p>Au piment d'Espelette et à la truffe noire</p>
-                            <span><strong>23€</strong></span>
-                        </div>
-                        <div class="cross">
-                            <span><i class="fas fa-check-circle fa-2x"</span>
-                        </div>
-                    </div>
+                    <div class="line"></div>
+                </div>
+                <div class="meals">
+                    <h4>Paris-Brest</h4>
+                <div class="last__line">
+                    <p>Revisité</p>
+                    <span><strong>18€</strong></span>
+                </div>
+                <div class="cross">
+                    <span><i class="fas fa-check-circle fa-2x"></i></span>
+                </div>
+                </div>
+                <div class="meals">
+                    <h4>Macaron au chocolat d'exception </h4>
+                <div class="last__line">
+                    <p>Et glace à la vanille de Madagascar</p>
+                    <span><strong>22€</strong></span>
+                </div>
+                <div class="cross">
+                    <span><i class="fas fa-check-circle fa-2x"></i></span>
+                </div>
+                </div>
+                <div class="meals">
+                    <h4>Mousse au chocolat</h4>
+                <div class="last__line">
+                    <p>Au piment d'Espelette et à la truffe noire</p>
+                    <span><strong>23€</strong></span>
+                </div>
+                <div class="cross">
+                    <span><i class="fas fa-check-circle fa-2x"></i></span>
                 </div>
             </div>
         </div>
-        <div>
-            <span class="btn__order">
-                <button>Commander</button>
-            </span>
-        </div>    
-    </main>
+    </div>
+    </div>
+    <div>
+        <span class="btn__order">
+        <button> Commander </button>
+        </span>
+    </div>
+</main>
 
 <!--footer-->
 
@@ -172,7 +171,7 @@
         <li><a href="a"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
         <li><a href="a"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
         <li><a href="a">Mention légales</a></li>
-        <li><a href="picard_mickael@hotmail.fr">Contact</a></li>
+        <li><a href="mailto:picard_mickael@hotmail.fr">Contact</a></li>
     </ul>
 </footer>    
     
