--- a/pages/Menu-à-la-française.html
+++ b/pages/Menu-à-la-française.html
@@ -115,8 +115,7 @@
         </div>
     </div>
 
-<!--Desserts-->
-
+    <!-- Desserts -->
     <div class="dessert">
         <div class="dessert__title">
             <h3>Desserts</h3>
@@ -125,12 +124,13 @@
         <div class="meals">
             <h4>Pétales de violettes glacés</h4>
             <div class="last__line">
-                <p>et purée de noisettes</p>
+                <p>Et purée de noisettes</p>
                 <span><strong>18€</strong></span>
             </div>
             <div class="cross">
                 <span><i class="fas fa-check-circle fa-2x"></i></span>
             </div>
+        </div>
         <div class="meals">
             <h4>Fondant au chocolat</h4>
             <div class="last__line">
@@ -140,10 +140,11 @@
             <div class="cross">
                 <span><i class="fas fa-check-circle fa-2x"></i></span>
             </div>
+        </div>
         <div class="meals">
             <h4>Millefeuille croustillant</h4>
             <div class="last__line">
-                <p>Myrtilles et pâte d'amande</p>
+                <p>Myrtilles et pâte d’amande</p>
                 <span><strong>23€</strong></span>
             </div>
             <div class="cross">
@@ -151,13 +152,14 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
 </div>
-    
-        <span class="btn__order">
-            <button>Commander</button>
-        </span>
+</div>
+<div>
+
+<span class="btn__order">
+    <button> Commander </button>
+</span>
+</div>
 </main>
 
     <footer>
