liens index pages

--- a/pages/Menu-La-note-enchantée.html
+++ b/pages/Menu-La-note-enchantée.html
@@ -19,8 +19,8 @@
 <!--Header-->
 
     <header class="menu__header">
-        <div class="arrow"><a href="../Index.html"><i class="fas fa-arrow-left"></i></a></div>
-        <h1><a href="../Index.html">ohmyfood</a></h1>
+        <div class="arrow"><a href="../index.html"><i class="fas fa-arrow-left"></i></a></div>
+        <h1><a href="../index.html">ohmyfood</a></h1>
     </header>
 
 <!--Main-->
